4482.	[bug]		Address use before require check and remove extraneous
			dns_message_gettsigkey call in dns_tsig_sign.
			[RT #43374]

4476.	[test]		Fix reclimit test on slower machines. [RT #43283]

4475.	[doc]		Update named-checkconf documentation. [RT #43153]

4474.	[bug]		win32: call WSAStartup in fromtext_in_wks so that
			getprotobyname and getservbyname work.  [RT #43197]

4473.	[bug]		Only call fsync / _commit on regular files. [RT #43196]

4472.	[bug]		Named could fail to find the correct NSEC3 records when
			a zone was updated between looking for the answer and
			looking for the NSEC3 records proving nonexistence
			of the answer. [RT #43247]

4471.	[cleanup]	Revert a query logging change inadvertently
			backported from 9.11. [RT #43238]

4468.	[bug]		Address ECS option handling issues. [RT #43191]

4467.	[security]	It was possible to trigger an assertion when
			rendering a message. (CVE-2016-2776) [RT #43139]

4466.	[bug]		Interface scanning didn't work on a Windows system
			without a non local IPv6 addresses. [RT #43130]

4464.	[bug]		Fix windows python support. [RT #43173]

4461.	[bug]		win32: not all external data was properly marked
			as external data for windows dll. [RT #43161]

4458.	[cleanup]	Update assertions to be more correct, and also remove
			use of a reserved word. [RT #43090]

4457.	[maint]		Added AAAA (2001:500:a8::e) for E.ROOT-SERVERS.NET.

4456.	[doc]		Add DOCTYPE and lang attribute to <html> tags.
			[RT #42587]

4453.	[bug]		Prefetching of DS records failed to update their
			RRSIGs. [RT #42865]

4451.	[cleanup]	Log more useful information if a PKCS#11 provider
			library cannot be loaded. [RT #43076]

4450.	[port]		Provide more nuanced HSM support which better matches
			the specific PKCS11 providers capabilities. [RT #42458]

4448.	[bug]		win32: ::1 was not being found when iterating
			interfaces. [RT #42993]

4446.	[bug]		The cache_find() and _findrdataset() functions
			could find rdatasets that had been marked stale.