@@ -16,7 +16,7 @@
 
 acl a {
 	{ "none"; };
-	{ !19.0.0.0/0; };
+	{ !19.0.0.0/8; };
 };
 
 options {
