@@ -49,7 +49,7 @@ zone "example" {
 zone "example.com" {
 	type master;
 	file "example.com.db.signed";
-	allow-update { 10.53.0.0/8; };
+	allow-update { 10.53.0.0/16; };
 };
 
 zone "good" {
